<resources>
    <string name="app_name">오늘은</string>
    <string name="toolbarName">커뮤니티</string>
    <string name="title_name">Title Name</string>
    <string name="teamAdd">팀 리더 추가</string>
    <string name="save">save</string>
    <string name="search">search</string>
    <string name="add">add</string>
    <string name="home">Home</string>
    <string name="memo">Memo</string>
    <string name="date">Date</string>
    <string name="mobile">mobile</string>
    <string name="leader">Leader</string>
    <string name="tmid">tmId</string>
    <string name="id">id</string>
    <string name="delete">delete</string>
    <string name="edit">edit</string>
    <string name="close">close</string>
    <string name="수정">수정하기</string>
    <string name="삭제">삭제하기</string>
    <string name="종료">종료하기</string>
    <string name="stid">stId</string>
    <string name="siteName">Site Name</string>
    <string name="sitePay">Site Pay</string>
    <string name="siteDate">Site Date</string>
    <string name="siteManager">Manager</string>
    <string name="siteMemo">Site Memo</string>
    <string name="teamLeader">Leader</string>
    <string name="teamSpinner">팀을 선택하세요?</string>
    <string name="table">table</string>
    <string name="추가">추가</string>
    <string name="새로고침">새로고침</string>
    <string name="닫기">닫기</string>
    <string name="siteSpinner">현장을 선택하세요?</string>
    <string name="팀회사">팀/회사</string>
    <string name="일일메모">일일 메모</string>
    <string name="일일금액">일일 금액</string>
    <string name="임금">임 금</string>
    <string name="일일">일일</string>
    <string name="현장">현장 이름</string>
    <string name="일자">일일 일자</string>
    <string name="일지id">일지 ID</string>
    <string name="start_date">Start Date</string>
    <string name="end_date">End Date</string>
    <string name="일합계">일합계 :</string>
    <string name="팀장">팀장</string>
    <string name="journal_id">journal id</string>
    <string name="jnid">JNID</string>
    <string name="journal_jnid">journal jnid</string>
    <string name="journal_date">journal date</string>
    <string name="one_day">one day</string>
    <string name="journal_amount">journal amount</string>
    <string name="journal_memo">journal memo</string>
    <string name="balance_amount">Balance Amount</string>
    <string name="잔액">잔액</string>
    <string name="balance_day">Balance Day</string>
    <string name="잔일">잔일</string>
    <string name="team_tax">Team Tax</string>
    <string name="taxs">세금</string>
    <string name="team_deposit">Team Deposit</string>
    <string name="deposit">입금</string>
    <string name="team_amount">Team Amount</string>
    <string name="amount">금액</string>
    <string name="team_days">Team days</string>
    <string name="ones">공수</string>
    <string name="team_name">Team Name</string>
    <string name="팀이름">팀 이름</string>
    <string name="income_id">Income ID</string>
    <string name="income_date">Income Date</string>
    <string name="team_leader">Team Leader</string>
    <string name="income_deposit">Income Deposit</string>
    <string name="income_tax">Income Tax</string>
    <string name="income_memo">Income Memo</string>
    <string name="icid">icid</string>
    <string name="select_leader">리더를 선택하세요</string>
    <string name="memos">메모</string>
    <string name="deposits">수입</string>
    <string name="leaders">리더</string>
    <string name="days">일자</string>
    <string name="site">현장</string>
    <string name="site_name">Site Name</string>
    <string name="costs">경비</string>
    <string name="cost_amount">Cost amount</string>
    <string name="day_one">Day One</string>
    <string name="csid">CSID</string>
    <string name="cost_id">Cost ID</string>
    <string name="day">일자</string>
    <string name="detail">내용</string>
    <string name="cost_detail">Cost Detail</string>
    <string name="price">단가</string>
    <string name="cost_price">Cost Price</string>
</resources>