<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="1dp"
    android:padding="1dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout_list_1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="1dp"
        android:padding="1dp"
        android:background="@drawable/cardview_background">

        <ImageView
            android:id="@+id/list_image"
            android:layout_width="40dp"
            android:layout_height="80dp"
            android:padding="5dp"
            android:layout_marginStart="1dp"
            android:layout_marginTop="1dp"
            android:scaleType="centerCrop"
            android:src="@drawable/img_00034s"
            app:layout_constraintEnd_toStartOf="@+id/linearLayout_cost_item"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="ContentDescription,ImageContrastCheck" />

        <LinearLayout
            android:id="@+id/linearLayout_cost_item"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginEnd="5dp"
            app:layout_constraintStart_toEndOf="@id/list_image"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:orientation="horizontal"
                android:layout_weight="1"
                android:weightSum="8">

                <TextView
                    android:id="@+id/txt_cost_item_name"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="1dp"
                    android:layout_marginEnd="1dp"
                    android:padding="1dp"
                    android:layout_weight="1"
                    android:background="@color/white"
                    android:text="@string/site"
                    android:textColor="@color/black"
                    android:textAlignment="center"
                    android:textSize="16sp"
                    tools:ignore="NestedWeights" />

                <TextView
                    android:id="@+id/edtxt_cost_item_name"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    android:layout_marginTop="1dp"
                    android:layout_marginEnd="1dp"
                    android:padding="1dp"
                    android:layout_weight="7"
                    android:text="@string/site_name"
                    android:textColor="@color/black"
                    android:textAlignment="center"
                    android:textSize="16sp"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:orientation="horizontal"
                android:layout_weight="1"
                android:weightSum="8">

                <TextView
                    android:id="@+id/txt_cost_item_one"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginTop="1dp"
                    android:layout_marginEnd="1dp"
                    android:padding="1dp"
                    android:background="@color/white"
                    android:text="@string/ones"
                    android:textColor="@color/black"
                    android:textAlignment="center"
                    android:textSize="16sp"
                    tools:ignore="NestedWeights" />

                <TextView
                    android:id="@+id/edtxt_cost_item_one"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:background="@color/white"
                    android:layout_marginTop="1dp"
                    android:layout_marginEnd="1dp"
                    android:padding="1dp"
                    android:text="@string/day_one"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textSize="16sp"/>

                <TextView
                    android:id="@+id/txt_cost_item_amount"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginTop="1dp"
                    android:layout_marginEnd="1dp"
                    android:padding="1dp"
                    android:background="@color/white"
                    android:text="@string/amount"
                    android:textColor="@color/black"
                    android:textAlignment="center"
                    android:textSize="16sp"/>

                <TextView
                    android:id="@+id/edtxt_cost_item_amount"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:layout_marginTop="1dp"
                    android:layout_marginEnd="1dp"
                    android:padding="1dp"
                    android:background="@color/white"
                    android:text="@string/team_amount"
                    android:textColor="@color/black"
                    android:textAlignment="center"
                    android:textSize="16sp"/>

            </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="horizontal"
            android:layout_weight="1"
            android:weightSum="8">

            <TextView
                android:id="@+id/txt_cost_item_leader"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginTop="1dp"
                android:layout_marginEnd="1dp"
                android:padding="1dp"
                android:background="@color/white"
                android:text="@string/leaders"
                android:textColor="@color/black"
                android:textAlignment="center"
                android:textSize="16sp"
                tools:ignore="NestedWeights" />

            <TextView
                android:id="@+id/edtxt_cost_item_leader"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:layout_marginTop="1dp"
                android:layout_marginEnd="1dp"
                android:padding="1dp"
                android:background="@color/white"
                android:text="@string/leader"
                android:textColor="@color/black"
                android:textAlignment="center"
                android:textSize="16sp"/>

            <TextView
                android:id="@+id/txt_cost_item_cost"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginTop="1dp"
                android:layout_marginEnd="1dp"
                android:padding="1dp"
                android:background="@color/white"
                android:text="@string/costs"
                android:textColor="@color/black"
                android:textAlignment="center"
                android:textSize="16sp"/>

            <TextView
                android:id="@+id/edtxt_cost_item_costs"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:layout_marginTop="1dp"
                android:layout_marginEnd="1dp"
                android:background="@color/white"
                android:padding="1dp"
                android:text="@string/cost_amount"
                android:textColor="@color/black"
                android:textAlignment="center"
                android:textSize="16sp"/>

        </LinearLayout>

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>