<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="2dp"
    android:padding="2dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@drawable/cardview_background"
        android:layout_gravity="center_vertical"
        android:gravity="center_vertical"
        android:layout_margin="1dp"
        tools:ignore="DisableBaselineAlignment">

        <ImageView
            android:layout_width="0dp"
            android:layout_height="110dp"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="3dp"
            android:layout_weight="1"
            android:scaleType="centerCrop"
            android:src="@drawable/img_00034s"
            tools:ignore="ContentDescription,ImageContrastCheck" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="7"
            android:orientation="vertical"
            android:layout_gravity="center_vertical"
            tools:ignore="UselessLeaf">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/txt_income_item_name"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:padding="2dp"
                    android:layout_margin="1dp"
                    android:text="@string/팀이름"
                    android:textColor="@color/black"
                    android:textSize="14sp"
                    android:lines="1"
                    android:maxLines="1"
                    android:textAlignment="gravity"
                    android:background="@color/white"
                    android:gravity="center_horizontal"
                    tools:ignore="HardcodedText,RtlCompat" />

                <TextView
                    android:id="@+id/edtxt_income_item_leader"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="6"
                    android:padding="2dp"
                    android:layout_margin="1dp"
                    android:text="@string/team_name"
                    android:textColor="@color/black"
                    android:textSize="14sp"
                    android:lines="1"
                    android:maxLines="1"
                    android:textAlignment="textStart"
                    android:background="@color/white"
                    android:gravity="center_horizontal"
                    tools:ignore="HardcodedText,RtlCompat" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/txt_income_item_days"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:padding="2dp"
                    android:layout_margin="1dp"
                    android:text="@string/ones"
                    android:textColor="@color/black"
                    android:textSize="14sp"
                    android:lines="1"
                    android:maxLines="1"
                    android:textAlignment="gravity"
                    android:background="@color/white"
                    android:gravity="center_horizontal"
                    tools:ignore="HardcodedText,RtlCompat" />

                <TextView
                    android:id="@+id/edtxt_income_item_days"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:padding="2dp"
                    android:layout_margin="1dp"
                    android:text="@string/team_days"
                    android:textColor="@color/black"
                    android:textSize="14sp"
                    android:lines="1"
                    android:maxLines="1"
                    android:textAlignment="textStart"
                    android:background="@color/white"
                    android:gravity="center_horizontal"
                    tools:ignore="HardcodedText,RtlCompat" />

                <TextView
                    android:id="@+id/txt_income_item_amount"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:padding="2dp"
                    android:layout_margin="1dp"
                    android:text="@string/amount"
                    android:textColor="@color/black"
                    android:textSize="14sp"
                    android:lines="1"
                    android:maxLines="1"
                    android:textAlignment="gravity"
                    android:background="@color/white"
                    android:gravity="center_horizontal"
                    tools:ignore="HardcodedText,RtlCompat" />

                <TextView
                    android:id="@+id/edtxt_income_item_amount"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:padding="2dp"
                    android:layout_margin="1dp"
                    android:text="@string/team_amount"
                    android:textColor="@color/black"
                    android:textSize="14sp"
                    android:lines="1"
                    android:maxLines="1"
                    android:textAlignment="textStart"
                    android:background="@color/white"
                    android:gravity="center_horizontal"
                    tools:ignore="HardcodedText,RtlCompat" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/txt_income_item_deposit"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:padding="2dp"
                    android:layout_margin="1dp"
                    android:text="@string/deposit"
                    android:textColor="@color/black"
                    android:textSize="14sp"
                    android:lines="1"
                    android:maxLines="1"
                    android:textAlignment="gravity"
                    android:background="@color/white"
                    android:gravity="center_horizontal"
                    tools:ignore="HardcodedText,RtlCompat" />

                <TextView
                    android:id="@+id/edtxt_income_item_deposit"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:padding="2dp"
                    android:layout_margin="1dp"
                    android:text="@string/team_deposit"
                    android:textColor="@color/black"
                    android:textSize="14sp"
                    android:lines="1"
                    android:maxLines="1"
                    android:textAlignment="textStart"
                    android:background="@color/white"
                    android:gravity="center_horizontal"
                    tools:ignore="HardcodedText,RtlCompat" />

                <TextView
                    android:id="@+id/txt_income_item_tax"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:padding="2dp"
                    android:layout_margin="1dp"
                    android:text="@string/taxs"
                    android:textColor="@color/black"
                    android:textSize="14sp"
                    android:lines="1"
                    android:maxLines="1"
                    android:textAlignment="gravity"
                    android:background="@color/white"
                    android:gravity="center_horizontal"
                    tools:ignore="HardcodedText,RtlCompat" />

                <TextView
                    android:id="@+id/edtxt_income_item_tax"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:padding="2dp"
                    android:layout_margin="1dp"
                    android:text="@string/team_tax"
                    android:textColor="@color/black"
                    android:textSize="14sp"
                    android:lines="1"
                    android:maxLines="1"
                    android:textAlignment="textStart"
                    android:background="@color/white"
                    android:gravity="center_horizontal"
                    tools:ignore="HardcodedText,RtlCompat" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/txt_income_item_balanceday"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:padding="2dp"
                    android:layout_margin="1dp"
                    android:text="@string/잔일"
                    android:textColor="@color/black"
                    android:textSize="14sp"
                    android:lines="1"
                    android:maxLines="1"
                    android:textAlignment="gravity"
                    android:background="@color/white"
                    android:gravity="center_horizontal"
                    tools:ignore="HardcodedText,RtlCompat" />

                <TextView
                    android:id="@+id/edtxt_income_item_balanceday"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:padding="2dp"
                    android:layout_margin="1dp"
                    android:text="@string/balance_day"
                    android:textColor="@color/black"
                    android:textSize="14sp"
                    android:lines="1"
                    android:maxLines="1"
                    android:textAlignment="textStart"
                    android:background="@color/white"
                    android:gravity="center_horizontal"
                    tools:ignore="HardcodedText,RtlCompat" />

                <TextView
                    android:id="@+id/txt_income_item_balanceamount"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:padding="2dp"
                    android:layout_margin="1dp"
                    android:text="@string/잔액"
                    android:textColor="@color/black"
                    android:textSize="14sp"
                    android:lines="1"
                    android:maxLines="1"
                    android:textAlignment="gravity"
                    android:background="@color/white"
                    android:gravity="center_horizontal"
                    tools:ignore="HardcodedText,RtlCompat" />

                <TextView
                    android:id="@+id/edtxt_income_item_balanceamount"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:padding="2dp"
                    android:layout_margin="1dp"
                    android:text="@string/balance_amount"
                    android:textColor="@color/black"
                    android:textSize="14sp"
                    android:lines="1"
                    android:maxLines="1"
                    android:textAlignment="textStart"
                    android:background="@color/white"
                    android:gravity="center_horizontal"
                    tools:ignore="HardcodedText,RtlCompat" />

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>