<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Journals.JournalTableActivity">

    <include
        android:id="@+id/custom_tb"
        layout="@layout/custom_toolbar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/line1_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="8dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="8dp"
        android:orientation="horizontal"
        android:padding="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/custom_tb">

        <EditText
            android:id="@+id/journal_edit_startDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="3dp"
            android:layout_marginEnd="2dp"
            android:layout_weight="1"
            android:autofillHints="creditCardExpirationDate"
            android:background="#E1DDDD"
            android:hint="@string/start_date"
            android:inputType="date"
            android:padding="5dp"
            android:textAlignment="center"
            android:textSize="16sp"
            tools:ignore="DuplicateSpeakableTextCheck,TouchTargetSizeCheck,VisualLintTextFieldSize" />

        <EditText
            android:id="@+id/journal_edit_endDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="1dp"
            android:layout_marginEnd="2dp"
            android:layout_weight="1"
            android:autofillHints="creditCardExpirationDate"
            android:background="#E1DDDD"
            android:hint="@string/end_date"
            android:inputType="date"
            android:padding="5dp"
            android:textAlignment="center"
            android:textSize="16sp"
            tools:ignore="DuplicateSpeakableTextCheck,TouchTargetSizeCheck,VisualLintTextFieldSize" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/line2_search"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="8dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="8dp"
        android:orientation="vertical"
        android:padding="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/line1_date">

        <EditText
            android:id="@+id/journal_table_site_search"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="2dp"
            android:background="@drawable/search_background"
            android:drawableEnd="@drawable/ic_search"
            android:hint=" 현장 이름을 입력 하세요?"
            android:importantForAutofill="no"
            android:minHeight="48dp"
            android:padding="5dp"
            android:textAlignment="center"
            android:textSize="18sp"
            tools:ignore="HardcodedText,RtlCompat,TextFields,VisualLintTextFieldSize" />

    </LinearLayout>


    <androidx.core.widget.NestedScrollView
        android:id="@+id/sv_journal"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="9.5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/line2_search"
        tools:ignore="UselessParent">

        <HorizontalScrollView
            android:id="@+id/hsv_journal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:ignore="SpeakableTextPresentCheck">

            <TableLayout
                android:id="@+id/journal_table"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/blue_200"
                android:collapseColumns="0,5,6,8,10"
                android:padding="1dp"
                android:shrinkColumns="0"
                android:stretchColumns="*">

            </TableLayout>

        </HorizontalScrollView>

    </androidx.core.widget.NestedScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="bottom"
        android:layout_margin="5dp"
        android:layout_weight="0.5"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:weightSum="5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/sv_journal"
        tools:ignore="RtlCompat">

        <TextView
            android:id="@+id/journal_text_sum_dailyOne"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_weight="1"
            android:background="@color/blue_200"
            android:lines="1"
            android:text="@string/일합계"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:textStyle="bold"
            tools:ignore=",NestedWeights" />

        <TextView
            android:id="@+id/journal_text_sum_dailyOne_input"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="1dp"
            android:layout_marginEnd="1dp"
            android:layout_weight="1"
            android:background="@color/blue_200"
            android:lines="1"
            android:text="0"
            android:textAlignment="textEnd"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:textStyle="bold"
            tools:ignore="HardcodedText,RtlCompat" />

        <TextView
            android:id="@+id/journal_text_sum_amount"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="1dp"
            android:layout_weight="1"
            android:background="@color/blue_200"
            android:lines="1"
            android:text="금액합계 :"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:textStyle="bold"
            tools:ignore="HardcodedText,RtlCompat" />

        <TextView
            android:id="@+id/journal_text_sum_amount_input"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="1dp"
            android:layout_marginEnd="3dp"
            android:layout_weight="2"
            android:background="@color/blue_200"
            android:lines="1"
            android:text="0"
            android:textAlignment="textEnd"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:textStyle="bold"
            tools:ignore="HardcodedText,RtlCompat" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>